<resources>
    <string-array name="numberOfPeopleArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="app_name">HitchHike</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="description">Description:</string>
    <string name="no_of_people">No. of People:</string>
    <string name="userType">User Type:</string>
    <string name="save">Save</string>
    <string name="hint_pick_up_date">dd/mm/yyyy</string>
    <string name="hint_pick_up_time">hh:mm:ss AM/PM</string>
    <string name="addTrip">Add Trip</string>
    <string name="rider">Rider</string>
    <string name="submit">Submit</string>
    <string name="driver">Driver</string>
    <string name="toLocation">To location</string>
    <string name="fromLocation">From location</string>
    <string name="looking_for">Looking For:</string>
    <string name="details">Details</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="schedule">Schedule</string>
    <string name="my_profile">My Profile</string>
    <string name="open_Nav_Drawer">Open Navigation Drawer</string>
    <string name="close_Nav_Drawer">Close Navigation Drawer</string>
    <string name="communicate">Communicate</string>
    <string name="my_rides">My Rides</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="create_new_account_sign_up"><u>Create New Account/Sign Up</u></string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Enter Username</string>
    <string name="notifications">Notifications</string>
    <string name="travel_with">Person:</string>
    <string name="name">Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="navigate_to_google_maps">Navigate to Google Maps</string>
    <string name="password_hint_goes_here">Password Should Contain: \nCapital Letter \nNumber</string>
    <string name="payment_and_other_details">Payment and other details</string>
    <string name="enter_from_location">Start City Name</string>
    <string name="destination_city_name">Destination City Name</string>
</resources>