<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/tripList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/from"
                android:textColor="#040303"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ems="10"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:hint="From" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/to"
                android:textColor="#040303"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ems="10"
                android:hint="To" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/looking_for"
                android:textColor="#040303"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radioBtnDriver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:ems="10"
                android:onClick="onRadioButtonClicked"
                android:text="@string/driver" />

            <RadioButton
                android:id="@+id/radioBtnRider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:checked="false"
                android:ems="10"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rider" />

            <Button
                android:id="@+id/btnFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3A50C6"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tripList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFilter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAddTrip"
        tools:listitem="@layout/trip_item"
        />

    <Button
        android:id="@+id/btnAddTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTrip"
        android:backgroundTint="#3A50C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripList"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnClearFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_filter"
        android:backgroundTint="#3A50C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tripList"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
