<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddTripActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/from"
                android:textColor="#040303"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:ems="10"
                android:hint="enter from location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/to"
                android:textColor="#040303"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:ems="10"
                android:hint="enter to location" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/description"
                android:textColor="#0B0A0A"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:ems="10"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/date"
                android:textColor="#020202"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:ems="10"
                android:hint="@string/hint_pick_up_date"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/time"
                android:textColor="#020202"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.68"
                android:ems="10"
                android:hint="@string/hint_pick_up_time"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:text="@string/looking_for"
                android:textColor="#040303"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/radioBtnDriver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:ems="10"
                android:onClick="onRadioButtonClicked"
                android:text="Driver" />

            <RadioButton
                android:id="@+id/radioBtnRider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:checked="false"
                android:ems="10"
                android:onClick="onRadioButtonClicked"
                android:text="Rider" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:ems="5"
                    android:text="@string/save"
                    app:backgroundTint="#3A50C6" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--<LinearLayout-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="horizontal"-->
<!--android:paddingTop="10dp"-->
<!--android:paddingBottom="10dp">-->

<!--<TextView-->
<!--    android:layout_width="0dp"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_weight="0.25"-->
<!--    android:text="@string/no_of_people"-->
<!--    android:textColor="#040303"-->
<!--    android:textSize="17sp" />-->

<!--<Spinner-->
<!--    android:id="@+id/spinnerNoOfPeople"-->
<!--    android:layout_width="0dp"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_weight="0.1"-->
<!--    android:ems="10"-->
<!--    android:textAlignment="viewEnd" />-->
<!--</LinearLayout>-->