<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:backgroundTint="#E8E8E8"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:ems="10"
                android:text="Cincinnati"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.32"
                android:ems="10"
                android:text="Cincinnati"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Cincinnati"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:paddingBottom="10dp"
                android:text="Cincinnati"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/travel_with"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardTravelWith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:paddingBottom="10dp"
                android:text="Cincinnati"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCardDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3A50C6"
                android:text="@string/details" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>