<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginVertical="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ems="10"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="Cincinnati"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ems="10"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="Cincinnati"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewCardDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:text="Cincinnati"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:paddingBottom="10dp"
                android:id="@+id/textViewCardTime"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:ems="10"
                android:text="Cincinnati"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCardDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:backgroundTint="#3A50C6"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>